<resources>
    <string name="app_name">吉祥荟</string>
    <string name="txt_service_number">021–63730073</string>
    <string name="txt_default">-----</string>
    <string name="txt_member_center">会员中心</string>
    <string name="txt_joy">娱乐</string>
    <string name="txt_order">订单</string>
    <string name="txt_dynamic">动态</string>
    <string name="txt_selected">精选</string>
    <string name="txt_my">我的</string>
    <string name="txt_coin">零钱包</string>
    <string name="txt_set">设置</string>
    <string name="txt_rmb_unit">元</string>
    <string name="txt_rmb_unit_bracket">(元)</string>
    <string name="txt_year_age">岁</string>
    <string name="txt_comfirm">确认</string>
    <string name="txt_ok">确定</string>
    <string name="txt_cancel">取消</string>
    <string name="txt_search">搜索</string>
    <string name="txt_commit">提交</string>
    <string name="txt_send">发送</string>
    <string name="txt_order_state1">派单</string>
    <string name="txt_exception">异常</string>
    <string name="txt_i_know">我知道了</string>
    <string name="txt_reserve">预定</string>
    <string name="txt_tip">提示</string>
    <string name="txt_jump">跳过</string>
    <string name="txt_no_data">没有更多数据啦</string>
    <string name="txt_tip_search_city">请输入要查找的城市</string>
    <string name="txt_tip_search_store">请输入店家名称</string>
    <string name="txt_tip_choose_reserve_time">请选择当天时间段</string>
    <string name="txt_tip_location_city_fail">定位失败，请手动选择城市</string>
    <string name="txt_tip_subscribe_fail">网络异常，提交失败</string>
    <string name="txt_tip_subscribe_success">提交成功</string>
    <string name="txt_tip_no_merchant">当前城市暂无相关店家</string>
    <string name="txt_connect_service">有问题请联系客服：021–63730073</string>
    <string name="txt_please_input_consume_account">请输入消费金额</string>
    <string name="txt_please_input_coin_consume_account">请输入零钱包消费金额</string>
    <string name="txt_please_input_coin_consume_remark">请输入零钱包消费备注</string>
    <string name="txt_please_input_room_num">请输入房间号</string>
    <string name="txt_phone">电话</string>
    <string name="txt_address">店家地址</string>
    <string name="txt_hot_city">热门城市</string>
    <string name="txt_hot_search">热门搜索</string>
    <string name="txt_shanghai">上海</string>
    <string name="txt_city">市</string>
    <string name="txt_current_city">当前城市-</string>
    <string name="city">城市</string>
    <string name="txt_phone_num">手机号码</string>
    <string name="txt_ktv">KTV</string>
    <string name="txt_club">会所</string>
    <string name="txt_club1">CLUB</string>
    <string name="txt_food">美食</string>
    <string name="txt_catering">餐饮</string>
    <string name="txt_vip">VIP</string>
    <string name="txt_model">模特</string>
    <string name="txt_shop">店家</string>
    <string name="txt_vip_area">VIP专区</string>
    <string name="yacht_club">游艇俱乐部</string>
    <string name="fly_club">飞行俱乐部</string>
    <string name="txt_subscribe">预约</string>
    <string name="txt_enter">进入</string>
    <string name="txt_subscribe_now">立即预约</string>
    <string name="txt_subscribe_detail">预定详情</string>
    <string name="intro">店家介绍</string>
    <string name="shop_albums">店家相册</string>
    <string name="photo_album">图集</string>
    <string name="txt_subscribe_shop">预定店家</string>
    <string name="txt_location_city">所在城市</string>
    <string name="txt_participation_num">参与人数</string>
    <string name="txt_arrive_time">到店时间</string>
    <string name="txt_call_num">联系电话</string>
    <string name="txt_phone_null_tip">请输入手机号码!</string>
    <string name="txt_regular_phone">^[0-9]{11}$</string>
    <string name="info_need_mobile_format_error">请输入11位手机号码</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="txt_more_info">更多信息</string>
    <string name="txt_personal_info">个人信息</string>
    <string name="txt_height">身高：</string>
    <string name="txt_weight">体重：</string>
    <string name="txt_bwh">三围：</string>
    <string name="txt_speciality">特长：</string>
    <string name="txt_address_order">预约地址</string>
    <string name="txt_address_choose">地址选择</string>
    <string name="txt_please_write_address">请填写详细的门牌号</string>
    <string name="txt_model_nickname">模特昵称</string>
    <string name="txt_appointment_address">预约地址</string>
    <string name="txt_consume_list">消费清单</string>
    <string name="txt_room_num">房间号</string>
    <string name="txt_model_order_detail">模特订单详情</string>
    <string name="txt_peop_num1">1~5人</string>
    <string name="txt_peop_num5">5~10人</string>
    <string name="txt_peop_num10">10~20人</string>
    <string name="txt_peop_num20">20人以上</string>
    <string name="txt_week_today">今天</string>
    <string name="txt_week_today_V">今\n天</string>
    <string name="txt_week_mon">周\n一</string>
    <string name="txt_week_tue">周\n二</string>
    <string name="txt_week_wed">周\n三</string>
    <string name="txt_week_thu">周\n四</string>
    <string name="txt_week_fri">周\n五</string>
    <string name="txt_week_sat">周\n六</string>
    <string name="txt_week_sun">周\n日</string>
    <string name="txt_card_number">卡号</string>
    <string name="txt_card_password">卡片密码</string>
    <string name="txt_please_bound_card">请绑定您吉祥荟的会员卡</string>
    <string name="txt_input_card_password">请输入您卡片的密码</string>
    <string name="txt_input_card_password_limit">请输入您6位卡片的密码</string>
    <string name="txt_input_card_number">请输入您的卡号</string>
    <string name="txt_input_card_number_limit">请输入您的8位卡号</string>
    <string name="txt_bind_card">绑定会员卡</string>
    <string name="txt_balance">余额(元)</string>
    <string name="txt_my_order">我的订单</string>
    <string name="txt_consumption">消费记录</string>
    <string name="txt_consumption_detail">消费详情</string>
    <string name="txt_recharge">充值记录</string>
    <string name="txt_profit">累计收益</string>
    <string name="txt_recharge_detail">充值详情</string>
    <string name="txt_activity">优惠活动</string>
    <string name="txt_coin_purse">零钱包</string>
    <string name="txt_input_gesture">绘制手势密码</string>
    <string name="txt_painting_gesture">输入原手势密码</string>
    <string name="txt_set_gesture">设置手势密码</string>
    <string name="txt_gesture_password">手势密码</string>
    <string name="txt_update_gesture">修改手势密码</string>
    <string name="txt_from_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="txt_account_date">yyyy年MM月</string>
    <string name="txt_account_date_day">yyyy-MM-dd</string>
    <string name="txt_create_date">yyyy-MM-dd HH:mm</string>
    <string name="txt_create_date_hour">HH:mm</string>
    <string name="txt_card_management">卡片管理</string>
    <string name="txt_modify_password">修改密码</string>
    <string name="txt_card_unbind">卡片解绑</string>
    <string name="txt_old_password">原密码</string>
    <string name="txt_new_password">设置新密码</string>
    <string name="txt_ok_new_password">确认新密码</string>
    <string name="txt_old_password_input">请输入原密码</string>
    <string name="txt_old_password_input_limit">请输入6~12位原密码</string>
    <string name="txt_new_password_input">请输入新密码</string>
    <string name="txt_new_password_input_limit">请输入6~12位新密码</string>
    <string name="txt_ok_new_password_input">请再次输入您的新密码</string>
    <string name="txt_ok_new_password_input_limit">请再次输入您的6~12位新密码</string>
    <string name="txt_ok_new_password_different">两次输入的密码不一致</string>
    <string name="txt_password">输入原密码后可修改您的卡片密码</string>
    <string name="txt_display_password">显示密码</string>
    <string name="txt_safe">应用安全</string>
    <string name="txt_card_administration">卡片管理</string>
    <string name="txt_about_my">关于我们</string>
    <string name="txt_recommend_card">推荐开卡</string>
    <string name="txt_open_card_record">开卡记录</string>
    <string name="txt_open_card_detail">开卡详情</string>
    <string name="txt_order_submission">订单提交</string>
    <string name="txt_pending_confirmation">待确认</string>
    <string name="txt_already_appointment">已预约</string>
    <string name="txt_confirmed">已确认</string>
    <string name="txt_order_completion">订单完成</string>
    <string name="txt_consume_amount">消费金额</string>
    <string name="txt_order_number">订单编号</string>
    <string name="txt_order_time">订单时间</string>
    <string name="txt_order_payment">支付方式</string>
    <string name="txt_order_number_participants">参与人数</string>
    <string name="txt_order_time_to_shop">到店时间</string>
    <string name="txt_order_manager_phone">经理电话</string>
    <string name="txt_order_store_location">店家位置</string>
    <string name="txt_order_store_name">店家名称</string>
    <string name="txt_site_album">店家相册</string>
    <string name="txt_order_detail">订单详情</string>
    <string name="txt_order_title1">客户经理会及时接单与您取得联系</string>
    <string name="txt_order_title2">您的满意是我们最大的动力</string>
    <string name="txt_record_consumption">消费:</string>
    <string name="txt_recharge_consumption">充值:</string>
    <string name="txt_feeMoney">累计收益:</string>
    <string name="txt_wallet_profit">累计收益(元)</string>
    <string name="txt_record_consumption_time">消费时间</string>
    <string name="txt_recharge_card">吉祥荟会员卡充值</string>
    <string name="txt_coin_purse_card">零钱包充值</string>
    <string name="txt_profit_history">收益</string>
    <string name="txt_recharge_money">充值金额</string>
    <string name="txt_recharge_order">交易单号</string>
    <string name="txt_recharge_time">充值时间</string>
    <string name="txt_recharge_way">充值方式</string>
    <string name="txt_unbind_card_delete">解绑该卡片，下次可以再次绑定该卡片</string>
    <string name="txt_unbind_card">解绑卡片</string>
    <string name="txt_input_password_unbind_card">请输入卡片密码,以解绑卡片</string>
    <string name="txt_input_password_verify_password">请输入卡片密码,以解除手势</string>
    <string name="txt_call_customer">联系客服</string>
    <string name="txt_welcome">欢迎页</string>
    <string name="txt_company">公司简介</string>
    <string name="txt_service_agreement">服务协议</string>
    <string name="txt_app_version">吉祥荟 V %1$s</string>
    <string name="txt_service_hot_phone">客服热线:</string>
    <string name="txt_app_call">拨打</string>
    <string name="txt_no_bind_card">您尚未绑定会员卡</string>
    <string name="txt_set_success">设置成功</string>
    <string name="txt_subscribe_success">预定成功</string>
    <string name="txt_verify_password">验证卡片密码</string>
    <string name="txt_current_time">请选择当天时间段</string>
    <string name="txt_order_state5">待结账</string>
    <string name="txt_order_state6">已结账</string>
    <string name="txt_recharge_discount">吉祥荟会员</string>
    <string name="txt_forget_password_">忘记密码</string>
    <string name="txt_forget_password_content">尊敬的用户，您好！\n忘记密码可以拨打客服电话\n%1$s\n进行密码修改，\n如有疑问也可以咨询相关客服。</string>
    <string name="txt_recharge_discount_activity">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;吉祥荟是聚赫文化集团倾力打造私人party会员服务，无论是KTV，还是俱乐部，或是美食，都能为您带来缤纷的礼遇、细心的关怀、尊贵的享受和特别的惊喜。高端娱乐、尊享生活，我们始终陪伴 ——吉祥荟！如需购卡可以联系我们的客服。客服电话：400-9912-120。</string>
    <string name="txt_card_password_instruction">1. 卡片密码为当前密码（未修改过卡\n片密码则为初始密码）。\n2. 卡片密码可以在“我的”--“设置”--“卡片管\n理”--“修改密码”中修改。</string>
    <string name="txt_card_password_bug">卡片密码错误</string>
    <string name="txt_no_data1">目前暂无您的订单</string>
    <string name="txt_no_data2">目前暂无您的消费记录</string>
    <string name="txt_no_data3">目前暂无您的充值记录</string>
    <string name="txt_no_data4">目前暂无您的收益记录</string>
    <string name="txt_no_data5">未找到您搜索的相关店家</string>
    <string name="txt_submit_success">提交成功</string>
    <string name="txt_update_success">修改成功</string>
    <string name="txt_update_fail">修改失败</string>
    <string name="txt_unbind_success">解绑成功</string>
    <string name="txt_unbind_fail">解绑失败</string>
    <string name="txt_submit_fail">提交失败</string>
    <string name="txt_manager_input_name">用户名</string>
    <string name="txt_manager_input_password">密码</string>
    <string name="txt_change_password">修改密码</string>
    <string name="txt_personal_message">个人消息</string>
    <string name="txt_exit">退出</string>
    <string name="txt_input_name">请输入用户名</string>
    <string name="txt_input_password">请输入您的登录密码</string>
    <string name="txt_input_limit">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="txt_name_and_password">请输入您的用户名和密码</string>
</resources>