<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <include layout="@layout/toolbar_common" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/font_small_xx_gray_deep_text"
        android:layout_marginLeft="@dimen/layout_space"
        android:layout_marginTop="@dimen/layout_space"
        android:text="@string/txt_please_bound_card" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_app_input_height"
        android:layout_marginTop="@dimen/layout_space"
        android:background="@color/setting_item_background">

        <TextView
            style="@style/font_small_xx_gray_text"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:text="@string/txt_card_number"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/edt_account_number"
            style="@style/font_small_xx_gray_deep_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_space"
            android:digits="@string/txt_input_limit"
            android:inputType="textAutoComplete"
            android:hint="@string/txt_input_card_number"
            android:maxLength="11"
            android:textColor="@color/white" />
    </LinearLayout>

    <include layout="@layout/view_divider_line_h"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_app_input_height"
        android:background="@color/setting_item_background"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            style="@style/font_small_xx_gray_text"
            android:layout_marginLeft="12dp"
            android:text="@string/txt_card_password"
            android:textColor="@color/white" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">

            <EditText
                android:id="@+id/edt_password"
                style="@style/font_small_xx_gray_deep_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:digits="@string/txt_input_limit"
                android:hint="@string/txt_input_card_password"
                android:inputType="textPassword"
                android:maxLength="12" />

            <ImageView
                android:id="@+id/img_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/layout_space"
                android:padding="5dp"
                android:layout_gravity="end|center_vertical"
                android:src="@drawable/icon_info"
                tools:ignore="ContentDescription" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        style="@style/font_small_xx_gray_deep_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_space"
        android:layout_marginRight="@dimen/layout_space"
        android:layout_marginTop="40dp"
        android:background="@drawable/selector_rect_corner_yellow_gray"
        android:enabled="false"
        android:textSize="@dimen/font_small_xx"
        android:text="@string/txt_ok" />
</LinearLayout>
