<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_common"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small_xx"
            android:text="@string/txt_address_order"/>
        <TextView
            android:id="@+id/txt_address_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:textSize="@dimen/font_small_xx"
            android:text="@string/txt_address_choose"
            android:drawableRight="@drawable/icon_list_arrow_right"
            android:drawablePadding="5dp"/>
    </FrameLayout>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edt_room_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:background="@color/title_background"
        android:hint="@string/txt_please_write_address"
        android:textColorHint="@color/gray_deep_x"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:layout_marginTop="40dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small_xx"
            android:text="@string/txt_phone_num"/>
        <EditText
            android:id="@+id/edt_phone_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/selector_rect_corner_yellow_trans"
        android:textSize="@dimen/font_small_xxx"
        android:text="@string/txt_reserve"/>
</LinearLayout>