<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_background">

    <include layout="@layout/toolbar_common" />

    <TextView
        style="@style/font_small_xx_gray_deep_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_space"
        android:layout_marginTop="@dimen/layout_space"
        android:text="@string/txt_name_and_password"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_app_input_height"
        android:layout_marginTop="@dimen/layout_space"
        android:background="@color/setting_item_background"
        android:orientation="horizontal">

        <TextView
            style="@style/font_small_xx_gray_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/layout_app_input_text_left_spacing"
            android:text="@string/txt_manager_input_name"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edt_name"
            style="@style/font_small_xx_gray_deep_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:singleLine="true"
            android:paddingLeft="80dp"
            android:background="@color/white_transparent"
            android:gravity="center_vertical"
            android:hint="@string/txt_input_name"
            android:textColor="@color/white"
            android:maxLength="18"/>

        <ImageView
            android:id="@+id/img_delete_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/layout_space"
            android:padding="5dp"
            android:src="@drawable/btn_delete"/>
    </FrameLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/layout_space"
        android:background="@color/gray_transparent"/>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/layout_app_input_height"
        android:background="@color/setting_item_background"
        android:orientation="horizontal">

        <TextView
            style="@style/font_small_xx_gray_text"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/layout_space"
            android:text="@string/txt_manager_input_password"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/edt_password"
            style="@style/font_small_xx_gray_deep_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="80dp"
            android:background="@color/white_transparent"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:singleLine="true"
            android:hint="@string/txt_input_password"
            android:maxLength="6"/>

        <ImageView
            android:id="@+id/img_delete_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/layout_space"
            android:padding="5dp"
            android:src="@drawable/btn_delete"/>
    </FrameLayout>

    <Button
        style="@style/font_small_xx_gray_deep_text"
        android:id="@+id/btn_confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_space"
        android:layout_marginRight="@dimen/layout_space"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_normal"
        android:text="@string/txt_ok"/>

</LinearLayout>
